fix section style overlapping background image/video

--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,7 @@ section.hero, section.banner {
     padding: 0; 
     margin-top: -60px !important;
     color: #fff;
+    background-color: transparent;
 }
 section.hero {
     height: 70vh;    
